--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "^4.0.2"
+    "typescript": "^3.4.5"
+  },
+  "resolutions": {
+    "gtoken": "4.1.1"
   }
 }
