--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "firebase": "^7.19.1",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "firebase": "^7.20.0",
     "firebase-admin": "^9.1.1",
     "firebaseui": "^4.6.1",
     "rxjs": "~6.4.0",
